After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736929 - importer: fix call to JS_ValueToId
importer: fix call to JS_ValueToId
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-18 21:04 UTC by Owen Taylor
Modified: 2014-09-26 18:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
importer: fix call to JS_ValueToId (912 bytes, patch)
2014-09-18 21:04 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2014-09-18 21:04:51 UTC
In a type fixup, out-return value from JS_ValueToId() was unintentionally
lost.
Comment 1 Owen Taylor 2014-09-18 21:04:54 UTC
Created attachment 286536 [details] [review]
importer: fix call to JS_ValueToId
Comment 2 Colin Walters 2014-09-18 22:26:12 UTC
Review of attachment 286536 [details] [review]:

You might mention the regression was from c7689ebba066a5028bab7202b515a482d63a5e25 in the commit log.
Comment 3 Owen Taylor 2014-09-26 18:03:18 UTC
Attachment 286536 [details] pushed as ee502e2 - importer: fix call to JS_ValueToId