importer: fix call to JS_ValueToId

In a type fixup, out-return value from JS_ValueToId() was unintentionally
lost.

https://bugzilla.gnome.org/show_bug.cgi?id=736929